# card_board

./: .pre-commit-config.yaml  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/card_board/: __init__.py
tests/: test_cardboard.py
